[tool.poetry]
name = "pysolarfocus"
version = "3.7.0"
description = "Unofficial, local Solarfocus client"
authors = ["Jeroen Laverman <jjlaverman@web.de>"]
license = "Apache-2.0"
homepage = "https://github.com/lavermanjj/pysolarfocus"
repository = "https://github.com/lavermanjj/pysolarfocus"
keywords = ["solarfocus", "api client"]
include = ["LICENSE"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pymodbus = "^3.4.1"
importlib = "^1.0.4"
packaging = "^23.1"
setuptools = "^68.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
